# JetPunk-Solver

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/solver/: main.py
src/solver/config/: config.ini  config.py
src/solver/quiz_types/: all_words.py  base.py  fill_in_the_blanks.py  multiple_choice.py
src/solver/utils/: automation.py  infer_quiz.py  quiz_json.py  scraper.py  text_cleaning.py
